Fixed responsive issue on smaller lessvertical screens

--- a/css/about.css
+++ b/css/about.css
@@ -29,15 +29,18 @@
 
 /* Background and layering styles for the entire About section */
 .about {
-    min-height: 100vh;  /* Adjust this value */
+    min-height: 60vh;
+    overflow: auto;
     z-index: 2;
     background: #1b1f2c;
     border-radius: 35px;
     position: relative;
-    overflow: hidden;
+    border: 1px solid red;
 }
 
-
+.container{
+    border: 1px solid rgb(255, 0, 174);
+}
 
 .about-title {
     font-family: 'Archivo';
@@ -49,11 +52,14 @@
     -webkit-text-fill-color: transparent; 
     color: transparent;
     text-align: center;
+    border: 1px solid blue;
+    font-size: 2rem;
 }
 
 .profilepic{
     max-width: 100%;
     height: auto;
+    border: 1px solid yellow;
 }
 
 .about-desc-text {
@@ -63,4 +69,5 @@
     background-clip: initial;
     -webkit-text-fill-color: initial; 
     color: #ffffff;
+    border: 1px solid green;
 }
